
    * Added an addAdaterNodeAt() method to the AdapterNode class so that
      it would be possible to add better drag and drop functionality, Notably
      being able to rearrange nodes within an element.
    * Added some more fold marks and javadoc to several classes.
    * Added the ability to rearrange text nodes and other nodes that aren't
      elements around within an element.

03/31/2004  version 0.1.58  Ian Lewis <IanLewis@member.fsf.org>

    * When you save out of the options panel after you changed options that
      change the XML document itself the open document is marked as dirty.
    * Fixed a bug where the source was not being changed when the encoding
      was changed because the XMLDocument object thought that the source
      was synced with the DOM.

03/18/2004  version 0.1.57  Ian Lewis <IanLewis@member.fsf.org>

    * Added check so that dragging and dropping a node on it's parent doesn't
      do anything and the buffer is not marked dirty (since nothing really
      changed).

02/29/2004  version 0.1.56  Ian Lewis <IanLewis@member.fsf.org>

    * Added preliminary drag n drop support for the tree in the default view.
      You can now drag nodes from one parent to another in the tree view. You
      can also drag a node to any thing that accepts text from a drag n drop
      operation.

02/27/2004  version 0.1.55  Ian Lewis <IanLewis@member.fsf.org>

    * Refactored the tree in the DefaultView to it's own class.
    * Added in some preliminary drag n drop stuff. Commented out
      so it will compile

02/21/2004  version 0.1.54  Ian Lewis <IanLewis@member.fsf.org>

    * DOCTYPE nodes are no longer visible in the tree. Some other method for
      editing doc types will have to be added to jsXe later.

02/16/2004  version 0.1.53  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug introduced in 0.1.51 that caused formatting not to work in
      the source view and when saving.
